[gd_scene load_steps=34 format=2]

[ext_resource path="res://Scenes/Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/MainMenu/Sprites/Backgound/Background.0000.png" type="Texture" id=2]
[ext_resource path="res://Backgrounds/MainMenu/Sprites/Backgound/Background.0001.png" type="Texture" id=3]
[ext_resource path="res://Backgrounds/MainMenu/Sprites/Backgound/Background.0002.png" type="Texture" id=4]
[ext_resource path="res://Backgrounds/MainMenu/Sprites/Backgound/Background.0003.png" type="Texture" id=5]
[ext_resource path="res://Backgrounds/MainMenu/Sprites/Backgound/Background.0004.png" type="Texture" id=6]
[ext_resource path="res://Backgrounds/MainMenu/Sprites/Backgound/Background.0005.png" type="Texture" id=7]
[ext_resource path="res://Backgrounds/MainMenu/Sprites/Backgound/Background.0006.png" type="Texture" id=8]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Themes/Default.theme" type="Theme" id=10]
[ext_resource path="res://Fonts/Godot/ControlsDefault.tres" type="DynamicFont" id=11]
[ext_resource path="res://Audio/Music/MainMenu.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=13]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=15]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=16]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=18]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=19]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=20]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=21]
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 9 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false

[node name="lblHeader" type="Label" parent="."]
margin_left = 408.0
margin_top = 4.0
margin_right = 1922.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
text = "Fiendship is epic"
align = 1

[node name="pnLeft" type="Panel" parent="."]
editor/display_folded = true
margin_left = 17.0
margin_top = 25.0
margin_right = 402.0
margin_bottom = 1055.0

[node name="btnStart" type="Button" parent="pnLeft"]
margin_left = 22.0
margin_top = 25.0
margin_right = 362.0
margin_bottom = 65.0
focus_neighbour_bottom = NodePath("../btnOptions")
custom_fonts/font = SubResource( 3 )
text = "Start Game"

[node name="btnOptions" type="Button" parent="pnLeft"]
margin_left = 22.0
margin_top = 80.0
margin_right = 362.0
margin_bottom = 120.0
focus_neighbour_top = NodePath("../btnStart")
focus_neighbour_bottom = NodePath("../btnQuit")
custom_fonts/font = SubResource( 4 )
text = "Options"

[node name="btnQuit" type="Button" parent="pnLeft"]
margin_left = 22.0
margin_top = 135.0
margin_right = 362.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="pnOptions" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 427.0
margin_top = 150.0
margin_right = 1897.0
margin_bottom = 1055.0
theme = ExtResource( 10 )

[node name="lblPlayer1" type="Label" parent="pnOptions"]
margin_left = 240.0
margin_top = 15.0
margin_right = 350.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 11 )
text = "Player 1:"

[node name="lblPlayer2" type="Label" parent="pnOptions"]
margin_left = 400.0
margin_top = 15.0
margin_right = 510.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 11 )
text = "Player 2:"

[node name="lblPlayer3" type="Label" parent="pnOptions"]
margin_left = 560.0
margin_top = 15.0
margin_right = 670.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 11 )
text = "Player 3:"

[node name="lblInputMethod" type="Label" parent="pnOptions"]
margin_left = 15.0
margin_top = 75.0
margin_right = 175.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 11 )
text = "Input Method:"

[node name="lblSetControler" type="Label" parent="pnOptions"]
margin_left = 15.0
margin_top = 135.0
margin_right = 128.0
margin_bottom = 169.0
custom_fonts/font = ExtResource( 11 )
text = "Controler:"

[node name="obCtlPlayer1" type="OptionButton" parent="pnOptions"]
margin_left = 240.0
margin_top = 75.0
margin_right = 350.0
margin_bottom = 115.0
focus_neighbour_bottom = NodePath("../btnScPl1")
custom_fonts/font = ExtResource( 11 )
text = "Input"

[node name="obCtlPlayer2" type="OptionButton" parent="pnOptions"]
margin_left = 400.0
margin_top = 75.0
margin_right = 510.0
margin_bottom = 115.0
focus_neighbour_bottom = NodePath("../btnScPl1")
custom_fonts/font = ExtResource( 11 )
text = "Input"

[node name="obCtlPlayer3" type="OptionButton" parent="pnOptions"]
margin_left = 560.0
margin_top = 75.0
margin_right = 670.0
margin_bottom = 115.0
focus_neighbour_bottom = NodePath("../btnScPl1")
custom_fonts/font = ExtResource( 11 )
text = "Input"

[node name="btnScPl1" type="Button" parent="pnOptions"]
margin_left = 240.0
margin_top = 135.0
margin_right = 350.0
margin_bottom = 172.0
focus_neighbour_top = NodePath("../obCtlPlayer1")
custom_fonts/font = ExtResource( 11 )
disabled = true
text = "Set"

[node name="btnScPl2" type="Button" parent="pnOptions"]
margin_left = 400.0
margin_top = 135.0
margin_right = 510.0
margin_bottom = 175.0
focus_neighbour_top = NodePath("../obCtlPlayer1")
disabled = true
text = "Set"

[node name="btnScPl3" type="Button" parent="pnOptions"]
margin_left = 560.0
margin_top = 135.0
margin_right = 670.0
margin_bottom = 175.0
focus_neighbour_top = NodePath("../obCtlPlayer1")
disabled = true
text = "Set"

[node name="btnOpOk" type="Button" parent="pnOptions"]
margin_left = 15.0
margin_top = 840.0
margin_right = 515.0
margin_bottom = 881.0
focus_neighbour_top = NodePath("../obCtlPlayer1")
custom_fonts/font = SubResource( 6 )
text = "OK"

[node name="btnOpDiscard" type="Button" parent="pnOptions"]
margin_left = 530.0
margin_top = 840.0
margin_right = 1030.0
margin_bottom = 881.0
focus_neighbour_top = NodePath("../obCtlPlayer1")
custom_fonts/font = SubResource( 7 )
text = "Discord"

[node name="pnStart" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 427.0
margin_top = 150.0
margin_right = 1897.0
margin_bottom = 1055.0
theme = ExtResource( 10 )

[node name="lblDifficulty" type="Label" parent="pnStart"]
margin_left = 15.0
margin_top = 15.0
margin_right = 140.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 8 )
text = "Difficulty:"
valign = 1

[node name="obDifficulty" type="OptionButton" parent="pnStart"]
margin_left = 200.0
margin_top = 15.0
margin_right = 400.0
margin_bottom = 50.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 9 )
text = "Difficulty"

[node name="lblPlayerCount" type="Label" parent="pnStart"]
margin_left = 15.0
margin_top = 75.0
margin_right = 140.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 10 )
text = "Player count:"
valign = 1

[node name="obPlayerCount" type="OptionButton" parent="pnStart"]
margin_left = 200.0
margin_top = 75.0
margin_right = 400.0
margin_bottom = 115.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Player count"

[node name="lblChSl" type="Label" parent="pnStart"]
margin_left = 15.0
margin_top = 135.0
margin_right = 183.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 12 )
text = "Character Selection:"
valign = 1

[node name="lblChSlPl1" type="Label" parent="pnStart"]
margin_left = 15.0
margin_top = 185.0
margin_right = 142.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 13 )
text = "Player 1:"
valign = 1

[node name="obChSlPl1" type="OptionButton" parent="pnStart"]
margin_left = 150.0
margin_top = 185.0
margin_right = 350.0
margin_bottom = 220.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 14 )
text = "Character"

[node name="lblChSlPl2" type="Label" parent="pnStart"]
margin_left = 15.0
margin_top = 240.0
margin_right = 142.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 15 )
text = "Player 2:"
valign = 1

[node name="obChSlPl2" type="OptionButton" parent="pnStart"]
margin_left = 150.0
margin_top = 240.0
margin_right = 350.0
margin_bottom = 275.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 16 )
disabled = true
text = "Character"

[node name="lblChSlPl3" type="Label" parent="pnStart"]
margin_left = 15.0
margin_top = 295.0
margin_right = 142.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 17 )
text = "Player 3:"
valign = 1

[node name="obChSlPl3" type="OptionButton" parent="pnStart"]
margin_left = 150.0
margin_top = 295.0
margin_right = 350.0
margin_bottom = 330.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 18 )
disabled = true
text = "Character"

[node name="btnStStart" type="Button" parent="pnStart"]
margin_left = 15.0
margin_top = 840.0
margin_right = 515.0
margin_bottom = 880.0
custom_fonts/font = SubResource( 19 )
text = "Start"

[node name="btnStBack" type="Button" parent="pnStart"]
margin_left = 530.0
margin_top = 840.0
margin_right = 1030.0
margin_bottom = 880.0
custom_fonts/font = SubResource( 20 )
text = "Back"

[node name="PopupDialog" type="PopupDialog" parent="."]
editor/display_folded = true
margin_left = 440.0
margin_top = 840.0
margin_right = 1875.0
margin_bottom = 960.0
popup_exclusive = true

[node name="lblSetControler2" type="Label" parent="PopupDialog"]
margin_left = 10.0
margin_top = 5.0
margin_right = 1427.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 21 )
text = "Press a key on the controler you want to assign with the player
or press excape on the keyboard to cancel"
align = 1
valign = 1

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="pnLeft/btnStart" to="." method="_on_btnStart_pressed"]
[connection signal="pressed" from="pnLeft/btnOptions" to="." method="_on_btnOptions_pressed"]
[connection signal="pressed" from="pnLeft/btnQuit" to="." method="_on_btnQuit_pressed"]
[connection signal="item_selected" from="pnOptions/obCtlPlayer1" to="." method="_on_obCtlPlayer_item_selected" binds= [ 1 ]]
[connection signal="item_selected" from="pnOptions/obCtlPlayer2" to="." method="_on_obCtlPlayer_item_selected" binds= [ 2 ]]
[connection signal="item_selected" from="pnOptions/obCtlPlayer3" to="." method="_on_obCtlPlayer_item_selected" binds= [ 3 ]]
[connection signal="pressed" from="pnOptions/btnScPl1" to="." method="_on_btnScPl_pressed" binds= [ 1 ]]
[connection signal="pressed" from="pnOptions/btnScPl2" to="." method="_on_btnScPl_pressed" binds= [ 2 ]]
[connection signal="pressed" from="pnOptions/btnScPl3" to="." method="_on_btnScPl_pressed" binds= [ 3 ]]
[connection signal="pressed" from="pnOptions/btnOpOk" to="." method="_on_btnOpOk_pressed"]
[connection signal="pressed" from="pnOptions/btnOpDiscard" to="." method="_on_btnOpDiscard_pressed"]
[connection signal="item_selected" from="pnStart/obPlayerCount" to="." method="_on_obPlayerCount_item_selected"]
[connection signal="item_selected" from="pnStart/obChSlPl1" to="." method="_on_obChSlPl_item_selected" binds= [ 1 ]]
[connection signal="item_selected" from="pnStart/obChSlPl2" to="." method="_on_obChSlPl_item_selected" binds= [ 2 ]]
[connection signal="item_selected" from="pnStart/obChSlPl3" to="." method="_on_obChSlPl_item_selected" binds= [ 3 ]]
[connection signal="pressed" from="pnStart/btnStStart" to="." method="_on_btnStStart_pressed"]
[connection signal="pressed" from="pnStart/btnStBack" to="." method="_on_btnStBack_pressed"]
